[project]
name = "michaelkoller"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Koller",email = "michael.koller@bluemail.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "graphviz (>=0.21,<0.22)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "swig (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
